--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       { id:"sunflower-classic", titulo:"Girasoles clásicos (6)", precio:599,  categoria:["cumple","express"], img:"https://images.unsplash.com/photo-1592924357228-91a4daadcfea?q=80&w=1200&auto=format&fit=crop", express:true },
       { id:"rosas-choco",       titulo:"Rosas + caja de chocolates", precio:949, categoria:["aniversario"], img:"https://images.unsplash.com/photo-1509043759401-136742328bb3?q=80&w=1200&auto=format&fit=crop", express:false },
       { id:"mix-primavera",     titulo:"Mix Primavera", precio:849, categoria:["cumple"], img:"https://images.unsplash.com/photo-1485686531765-ba676f7e57d1?q=80&w=1200&auto=format&fit=crop", express:false },
-      { id:"lily-blanco",       titulo:"Azulitos", precio:799, categoria:["condolencias"], img:"https://pin.it/6YlRDIHBD=80&w=1200&auto=format&fit=crop=80&w=1200&auto=format&fit=crop", express:false },
+      { id:"lily-blanco",       titulo:"Azulitos", precio:799, categoria:["condolencias"], img:"https://pin.it/6YlRDIHBD", express:false },
       { id:"bouquet-rs",        titulo:"Bouquet Rabbits & Sunflowers", precio:999, categoria:["aniversario","express"], img:"https://images.unsplash.com/photo-1501004318641-b39e6451bec6?q=80&w=1200&auto=format&fit=crop", express:true }
     ];
 
