--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="img">
-        <img src="assets/logo.png" alt="Rabbits & Sunflowers">
+        <img src="assets/hero/descarga.jfif" alt="Rabbits & Sunflowers">
       </div>
     </div>
   </section>
