Replace hero image with logo in index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
       </div>
       <div class="img-container">
-        <img src="assets/hero/descarga.jfif" alt="Arreglo floral del día">
+        <img src="assets/logo.png" alt="Arreglo floral del día">
       </div>
     </div>
   </section>
