Change emoji in hero section header

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <section class="hero">
     <div class="container hero-grid">
       <div>
-        <h1>Arreglos que<br><span style="color:var(--verde)">hablan por ti 🚀</span></h1>
+        <h1>Arreglos que<br><span style="color:var(--verde)">hablan por ti 💐</span></h1>
         <p style="color:var(--gris-600); font-size:1.1rem">Flores frescas con entrega el mismo día en CDMX.</p>
         <div style="display:flex; gap:10px; margin-top:20px">
           <a id="ctaHero" class="btn btn-secondary" target="_blank">Pedir por WhatsApp 💬</a>
