Replace customer reviews with new testimonials
Updated customer reviews in index.html with new feedback.

--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@
       <div class="reviews-grid">
         <article class="review-card">
           <div class="stars">★★★★★</div>
-          <p>"El servicio por WhatsApp es súper rápido y las flores llegaron muy frescas."</p>
-          <small><strong>- María José G.</strong></small>
+          <p>"Están tan padres las flores que me las quiero tatuar"</p>
+          <small><strong>- Ponchis.</strong></small>
         </article>
         <article class="review-card">
           <div class="stars">★★★★★</div>
-          <p>"Pedí un ramo de para mi esposa y fue el más bonito que he comprado."</p>
-          <small><strong>- Carlos R.</strong></small>
+          <p>"El señor que entregó las flores venía pisteando y me invitó una chela!"</p>
+          <small><strong>- Emi .</strong></small>
         </article>
         <article class="review-card">
           <div class="stars">★★★★★</div>
           <p>"Me salvaron con el envío express, llegó en menos de 3 horas."</p>
-          <small><strong>- Fernanda S.</strong></small>
+          <small><strong>- Chuchin.</strong></small>
         </article>
         <article class="review-card">
           <div class="stars">★★★★★</div>
